src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__comparison_chain.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Binary {
                                    op: And,
                                    left: Expr {
                                        kind: Binary {
                                            op: And,
                                            left: Expr {
                                                kind: Binary {
                                                    op: Lt,
                                                    left: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 2,
                                                                            },
                                                                            span: Span {
                                                                                start: 9,
                                                                                end: 10,
                                                                                start_line: 1,
                                                                                start_col: 10,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 9,
                                                                    end: 10,
                                                                    start_line: 1,
                                                                    start_col: 10,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 9,
                                                            end: 10,
                                                            start_line: 1,
                                                            start_col: 10,
                                                        },
                                                    },
                                                    right: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 3,
                                                                            },
                                                                            span: Span {
                                                                                start: 13,
                                                                                end: 14,
                                                                                start_line: 1,
                                                                                start_col: 14,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 13,
                                                                    end: 14,
                                                                    start_line: 1,
                                                                    start_col: 14,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 13,
                                                            end: 14,
                                                            start_line: 1,
                                                            start_col: 14,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 9,
                                                    end: 14,
                                                    start_line: 1,
                                                    start_col: 10,
                                                },
                                            },
                                            right: Expr {
                                                kind: Binary {
                                                    op: Lt,
                                                    left: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 3,
                                                                            },
                                                                            span: Span {
                                                                                start: 18,
                                                                                end: 19,
                                                                                start_line: 1,
                                                                                start_col: 19,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 18,
                                                                    end: 19,
                                                                    start_line: 1,
                                                                    start_col: 19,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 18,
                                                            end: 19,
                                                            start_line: 1,
                                                            start_col: 19,
                                                        },
                                                    },
                                                    right: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 4,
                                                                            },
                                                                            span: Span {
                                                                                start: 22,
                                                                                end: 23,
                                                                                start_line: 1,
                                                                                start_col: 23,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 22,
                                                                    end: 23,
                                                                    start_line: 1,
                                                                    start_col: 23,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 22,
                                                            end: 23,
                                                            start_line: 1,
                                                            start_col: 23,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 18,
                                                    end: 23,
                                                    start_line: 1,
                                                    start_col: 19,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 9,
                                            end: 23,
                                            start_line: 1,
                                            start_col: 10,
                                        },
                                    },
                                    right: Expr {
                                        kind: Binary {
                                            op: Lt,
                                            left: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 4,
                                                                    },
                                                                    span: Span {
                                                                        start: 27,
                                                                        end: 28,
                                                                        start_line: 1,
                                                                        start_col: 28,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 27,
                                                            end: 28,
                                                            start_line: 1,
                                                            start_col: 28,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 27,
                                                    end: 28,
                                                    start_line: 1,
                                                    start_col: 28,
                                                },
                                            },
                                            right: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 5,
                                                                    },
                                                                    span: Span {
                                                                        start: 31,
                                                                        end: 32,
                                                                        start_line: 1,
                                                                        start_col: 32,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 31,
                                                            end: 32,
                                                            start_line: 1,
                                                            start_col: 32,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 31,
                                                    end: 32,
                                                    start_line: 1,
                                                    start_col: 32,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 27,
                                            end: 32,
                                            start_line: 1,
                                            start_col: 28,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 9,
                                    end: 32,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 34,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 34,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 34,
        start_line: 1,
        start_col: 1,
    },
}
