src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__comparison_expr.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Binary {
                                    op: Or,
                                    left: Expr {
                                        kind: Binary {
                                            op: And,
                                            left: Expr {
                                                kind: Binary {
                                                    op: Eq,
                                                    left: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 2,
                                                                            },
                                                                            span: Span {
                                                                                start: 9,
                                                                                end: 10,
                                                                                start_line: 1,
                                                                                start_col: 10,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 9,
                                                                    end: 10,
                                                                    start_line: 1,
                                                                    start_col: 10,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 9,
                                                            end: 10,
                                                            start_line: 1,
                                                            start_col: 10,
                                                        },
                                                    },
                                                    right: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 3,
                                                                            },
                                                                            span: Span {
                                                                                start: 14,
                                                                                end: 15,
                                                                                start_line: 1,
                                                                                start_col: 15,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 14,
                                                                    end: 15,
                                                                    start_line: 1,
                                                                    start_col: 15,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 14,
                                                            end: 15,
                                                            start_line: 1,
                                                            start_col: 15,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 9,
                                                    end: 15,
                                                    start_line: 1,
                                                    start_col: 10,
                                                },
                                            },
                                            right: Expr {
                                                kind: Binary {
                                                    op: Ne,
                                                    left: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 4,
                                                                            },
                                                                            span: Span {
                                                                                start: 19,
                                                                                end: 20,
                                                                                start_line: 1,
                                                                                start_col: 20,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 19,
                                                                    end: 20,
                                                                    start_line: 1,
                                                                    start_col: 20,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 19,
                                                            end: 20,
                                                            start_line: 1,
                                                            start_col: 20,
                                                        },
                                                    },
                                                    right: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 5,
                                                                            },
                                                                            span: Span {
                                                                                start: 24,
                                                                                end: 25,
                                                                                start_line: 1,
                                                                                start_col: 25,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 24,
                                                                    end: 25,
                                                                    start_line: 1,
                                                                    start_col: 25,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 24,
                                                            end: 25,
                                                            start_line: 1,
                                                            start_col: 25,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 19,
                                                    end: 25,
                                                    start_line: 1,
                                                    start_col: 20,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 9,
                                            end: 25,
                                            start_line: 1,
                                            start_col: 10,
                                        },
                                    },
                                    right: Expr {
                                        kind: Binary {
                                            op: Lt,
                                            left: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 6,
                                                                    },
                                                                    span: Span {
                                                                        start: 29,
                                                                        end: 30,
                                                                        start_line: 1,
                                                                        start_col: 30,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 29,
                                                            end: 30,
                                                            start_line: 1,
                                                            start_col: 30,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 29,
                                                    end: 30,
                                                    start_line: 1,
                                                    start_col: 30,
                                                },
                                            },
                                            right: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 1,
                                                                    },
                                                                    span: Span {
                                                                        start: 33,
                                                                        end: 34,
                                                                        start_line: 1,
                                                                        start_col: 34,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 33,
                                                            end: 34,
                                                            start_line: 1,
                                                            start_col: 34,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 33,
                                                    end: 34,
                                                    start_line: 1,
                                                    start_col: 34,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 29,
                                            end: 34,
                                            start_line: 1,
                                            start_col: 30,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 9,
                                    end: 34,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 36,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 36,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 36,
        start_line: 1,
        start_col: 1,
    },
}
